(library
 (name caml_objinfo)
 (modules caml_objinfo)
 (libraries astring compiler-libs.common bos rresult))

(library
 (name selective)
 (modules selective))

(library
 (name resolver)
 (modules resolver)
 (libraries caml_objinfo selective))

(library
 (name mirage_nolink)
 (modules mirage_nolink)
 (libraries resolver))
